Fix image download on mobile

--- a/spotify-wrapped/src/App.css
+++ b/spotify-wrapped/src/App.css
@@ -2,6 +2,7 @@
     position: relative;
     display: flex;
     justify-content: center;
+    text-transform: lowercase;
 }
 
 .website-name {
