--- a/spotify-wrapped/src/Collage/Collage.css
+++ b/spotify-wrapped/src/Collage/Collage.css
@@ -16,6 +16,7 @@
     overflow: hidden !important;
     white-space: nowrap !important;
     text-overflow: ellipsis !important;
+    color: black !important;
 }
 
 .ReactGridGallery_tile-bottom-bar > div > span {
@@ -24,9 +25,6 @@
     padding: 0 0.6em 0.25em !important;
     font-variant: small-caps;
     border-radius: 0 !important;
-}
-
-.ReactGridGallery_tile-bottom-bar > div > span {
     font-weight: bold !important;
 }
 
