--- a/spotify-wrapped/src/index.css
+++ b/spotify-wrapped/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 24px;
-  text-transform: lowercase;
+  text-align: -webkit-center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
